apps/gchat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gchat
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - gchat.gerardosalazar.com
      secretName: gchat-gerardosalazar-com-tls
  rules:
    - host: gchat.gerardosalazar.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gchat-scaling-dashboard
                port:
                  number: 5001
